--- a/index.html
+++ b/index.html
@@ -10,39 +10,57 @@
 
 <body>
   <div class="header">
-    <h1>Youth Programming 101</h1>
+    <h1>Programming 101 For Kids</h1>
     <h2>An introductory course to software programming for beginners</h2>
   </div>
 
   <div class="tagline">
     <div class="content-wrapper">
-      <h3>Learn More About Me!</h3>
-      <p>I have always been very passionate about all things involving technology.
-        I worked at a local chinese school as a teaching assistant on Lego Robot class.
+      <h3>About This Course</h3>
+      <p>Have you ever wished you knew how to program, but had no idea where to start from? Or are you bored with learning code on Scratch and wondering what a real program looks like?  </p>
+       <p>This course will introduce you to realworld pragramming lauguages. More importantly, it will introduce you to the fundamental coding concepts and help you think like a programmer.
       </p>
     </div>
   </div>
 
   <div class="skills">
     <div class="content-wrapper">
-      <h3>Programming Languages</h3>
-      <p>This is not a Web development course, however skills with these 
-        web development tools is an essential for any modern delelopers. 
-        We'll use javasrcipt throughout the course to exercise basic programming concepts. 
-        Students will also have the oppotunity to play with a bit of HTML and CSS.</p>
+      <h3>What You Will Learn</h3>
+      <div class="subskills">
+      <h4>Programming Concepts</h4>
       <ul>
-        <li>JavaScript</li>
-        <li>HTML</li>
-        <li>CSS</li>
+        <li>Variables</li>
+        <li>Basic Data Types and Structures</li>
+        <li>Baisc Flow Controls</li>
+      </ul>
+      </div>
+
+      <div class="subskills">
+      <h4>Programming Languages/Skills</h4>
+      <ul>
+        <li>Intro to JavaScript</li>
+        <li>Web Page with HTML and CSS</li>
+        <li>Interactive Web With JavaScript</li>
+        <li>HTML Canvas Game Development</li>
+      </ul>
+      </div>
+    </div>
+  </div>
+  <div class="requirement">
+    <div class="content-wrapper">
+      <h3>Prerequisites</h3>
+      <ul>
+        <li>No previous programming knowledge required</li>
+        <li>Recommended Student Age: 10  - 15</li>
+        <li>A Gmail account</li>
+        <li>A Laptop/MacBook/iPad/Chromebook with WiFi</li>
       </ul>
     </div>
   </div>
-
   <div class="contact">
     <div class="content-wrapper">
-      <h3>Contact Me</h3>
-      <p>Please feel free to contact me by email</p>
-      <p><a href="fll2klu@gmail.com"> email </a></p>
+      <h3>About the Instructor</h3>
+      <p>Mr. Lu is a full-stack software developer and have over 15 years of software development experience in Healthcare industry.
     </div>
   </div>
 
