--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
   <link rel="stylesheet" href="main.css">
-  <title>HTML Portfolio</title>
+  <title>Little Star Programming 101</title>
 </head>
 
 <body>
@@ -51,7 +51,7 @@
       <h3>Prerequisites</h3>
       <ul>
         <li>No previous programming knowledge required</li>
-        <li>Recommended Student Age: 10  - 15</li>
+        <li>Recommended student age: 10 - 15</li>
         <li>A Gmail account</li>
         <li>A Laptop/MacBook/iPad/Chromebook with WiFi</li>
       </ul>
