--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="content-wrapper">
       <h3>About This Course</h3>
       <p>Have you ever wished you knew how to program, but had no idea where to start from? Or are you bored with learning code on Scratch and wondering what a real program looks like?  </p>
-       <p>This course will introduce you to realworld pragramming lauguages. More importantly, it will introduce you to the fundamental coding concepts and help you think like a programmer.
+       <p>This course will introduce you to real world pragramming languages. More importantly, it will introduce you to the fundamental coding concepts and help you think like a programmer.
       </p>
     </div>
   </div>
