--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
 	<div class="header">
 		<div class="site-avatar">
+      <a href="https://littlestarchineseschool.com/">
 			<img src="lscs.png" alt="Little Star" >
+      </a>
     </div>
 
     <div class="header-content">
