--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <ul>
         <li>Variables</li>
         <li>Basic Data Types and Structures</li>
-        <li>Baisc Flow Controls</li>
+        <li>Basic Flow Controls</li>
       </ul>
       </div>
 
