--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
             white-space: nowrap;
             -webkit-overflow-scrolling: touch;
         }
+
+        .site-avatar {
+            border-radius: 50%;
+            width: 60px;
+            height: 60px;
+        }
     </style>
 
 
@@ -92,7 +98,7 @@
         <header>
             <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
                 <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-                    <img src="./lscs.png" width="40" height="40" class="me-2" viewBox="0 0 118 94" alt="Little Star">
+                    <img src="./lscs.png" width="40" height="40" class="me-2, site-avatar" viewBox="0 0 118 94" alt="Little Star">
                     <span class="fs-4">Little Star Spring 2023</span>
                 </a>
             </div>
@@ -139,12 +145,12 @@
                             <ul class="list-unstyled mt-3 mb-4">
                                 <li>Prep. Course for AP Computer Science-A</li>
                                 <li>8th grader and up</li>
-                                <li>or previous Students</li>
+                                <li>or former students</li>
                                 <li>Google Account Required</li>
                                 <li>Chromebook/Laptop, Macbook preferred</li>
                                 <li>In-class coding & Weekly homework</li>
                             </ul>
-                            <button type="button" class="w-100 btn btn-lg btn-primary">Somewhat Programming Skill
+                            <button type="button" class="w-100 btn btn-lg btn-primary">Somewhat Programming Experience
                             </button>
                         </div>
                     </div>
