--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </header>
 
         <main>
-            <div class="row row-cols-1 row-cols-md-2 mb-2 text-center">
+            <div class="row row-cols-1 row-cols-sm-2 mb-2 text-center">
                 <div class="col">
                     <div class="card mb-4 rounded-3 shadow-sm">
                         <div class="card-header py-3">
