--- a/index.html
+++ b/index.html
@@ -138,15 +138,15 @@
                 <div class="col">
                     <div class="card mb-4 rounded-3 shadow-sm border-primary">
                         <div class="card-header py-3 text-bg-primary border-primary">
-                            <h4 class="my-0 fw-normal">AP Computer Science A Prep.</h4>
+                            <h4 class="my-0 fw-normal">AP Computer Science-A Prep.</h4>
                         </div>
                         <div class="card-body">
                             <h1 class="card-title pricing-card-title">Novice</h1>
                             <ul class="list-unstyled mt-3 mb-4">
-                                <li>Prep. Course for AP Computer Science-A</li>
-                                <li>8th grader and up</li>
-                                <li>or former students</li>
-                                <li>Google Account Required</li>
+                                <li>Prep. Course for High School AP <b>Course</b></li>
+                                <li>Learn programming with Java</li>
+                                <li>Not necessarily targeting AP test</li>
+                                <li>8th grader and up or former students</li>
                                 <li>Chromebook/Laptop, Macbook preferred</li>
                                 <li>In-class coding & Weekly homework</li>
                             </ul>
